--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,8 @@
     // See also https://aka.ms/tsconfig/module
     "module": "commonjs",
     "target": "esnext",
-    "types": [],
-    // For nodejs:
-    // "lib": ["esnext"],
-    // "types": ["node"],
-    // and npm install -D @types/node
+    "types": ["node"],
+    "lib": ["esnext"]
 
     // Other Outputs
     "sourceMap": true,
