--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    // File Layout
     "rootDir": "./src",
     "outDir": "./dist",
-
-    // Environment Settings
     "module": "CommonJS",
     "moduleResolution": "node",
     "target": "ES2020",
@@ -16,11 +12,10 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
+    "declarationMap": false,
+    "sourceMap": false,
+    "noEmit": true,
     "types": ["node"],
-
-    // Path Mapping
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
